--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact Me on LINE</title>
+  <title>Contact on LINE</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,13 +31,14 @@
       margin-bottom: 1.2rem;
     }
     .btn {
-      display: inline-block;
+      display: block;
       background-color: #06C755; /* LINE green */
       color: #fff;
       padding: 15px 20px;
       border-radius: 8px;
       font-size: 1rem;
       text-decoration: none;
+      margin: 10px 0;
       transition: background-color 0.3s ease;
     }
     .btn:hover {
@@ -54,10 +55,14 @@
 </head>
 <body>
   <div class="container">
-    <!-- 可选LOGO -->
+    <!-- 可选 LOGO -->
     <!-- <img src="你的LOGO链接" alt="Logo"> -->
     <h1>please send order here</h1>
+    <!-- 个人 LINE 好友链接 -->
     <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">Add me on LINE</a>
+    <!-- LINE 群组链接 -->
+    <a class="btn" href="https://line.me/ti/g/NHALzjBWAe" target="_blank">Join LINE Group</a>
   </div>
 </body>
 </html>
+
