--- a/index.html
+++ b/index.html
@@ -3,50 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact on LINE</title>
+  <title>服装批发小店</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f5f5f5;
       color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       text-align: center;
     }
     .container {
-      background: #ffffff;
-      padding: 30px;
+      max-width: 400px;
+      margin: 20px auto;
+      background: #fff;
       border-radius: 16px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
+      padding: 20px;
     }
     h1 {
       font-size: 1.4rem;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1rem;
     }
     .btn {
       display: block;
-      background-color: #06C755; /* LINE green */
+      background-color: #06C755;
       color: #fff;
-      padding: 15px 20px;
+      padding: 12px 0;
       border-radius: 8px;
-      font-size: 1rem;
       text-decoration: none;
       margin: 10px 0;
-      transition: background-color 0.3s ease;
+      font-size: 1rem;
+      transition: 0.3s;
     }
     .btn:hover {
       background-color: #04a94b;
     }
-    img {
-      width: 100px;
-      height: 100px;
+    .carousel img {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+      margin-bottom: 10px;
+    }
+    .logo {
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 15px;
@@ -55,14 +56,24 @@
 </head>
 <body>
   <div class="container">
-    <!-- 可选 LOGO -->
-    <!-- <img src="你的LOGO链接" alt="Logo"> -->
+    <!-- LOGO -->
+    <img class="logo" src="https://via.placeholder.com/80" alt="Logo">
     <h1>please send order here</h1>
-    <!-- 个人 LINE 好友链接 -->
+
+    <!-- LINE 好友按钮 -->
     <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">Add me on LINE</a>
-    <!-- LINE 群组链接 -->
+    <!-- LINE 群组按钮 -->
     <a class="btn" href="https://line.me/ti/g/NHALzjBWAe" target="_blank">Join LINE Group</a>
+
+    <!-- 热销款轮播图 -->
+    <div class="carousel">
+      <img src="https://via.placeholder.com/350x200?text=Hot+Item+1" alt="Hot Item 1">
+      <img src="https://via.placeholder.com/350x200?text=Hot+Item+2" alt="Hot Item 2">
+      <img src="https://via.placeholder.com/350x200?text=Hot+Item+3" alt="Hot Item 3">
+    </div>
+
+    <!-- 发送订单按钮 -->
+    <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">?? Send Order</a>
   </div>
 </body>
 </html>
-
