--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>·ş×°Åú·¢Ğ¡µê</title>
+  <title>æœè£…æ‰¹å‘å°åº—</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -60,19 +60,19 @@
     <img class="logo" src="https://via.placeholder.com/80" alt="Logo">
     <h1>please send order here</h1>
 
-    <!-- LINE ºÃÓÑ°´Å¥ -->
+    <!-- LINE å¥½å‹æŒ‰é’® -->
     <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">Add me on LINE</a>
-    <!-- LINE Èº×é°´Å¥ -->
+    <!-- LINE ç¾¤ç»„æŒ‰é’® -->
     <a class="btn" href="https://line.me/ti/g/NHALzjBWAe" target="_blank">Join LINE Group</a>
 
-    <!-- ÈÈÏú¿îÂÖ²¥Í¼ -->
+    <!-- çƒ­é”€æ¬¾è½®æ’­å›¾ -->
     <div class="carousel">
       <img src="https://via.placeholder.com/350x200?text=Hot+Item+1" alt="Hot Item 1">
       <img src="https://via.placeholder.com/350x200?text=Hot+Item+2" alt="Hot Item 2">
       <img src="https://via.placeholder.com/350x200?text=Hot+Item+3" alt="Hot Item 3">
     </div>
 
-    <!-- ·¢ËÍ¶©µ¥°´Å¥ -->
+    <!-- å‘é€è®¢å•æŒ‰é’® -->
     <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">?? Send Order</a>
   </div>
 </body>
