--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>服装批发小店</title>
+  <title>服装批发</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -39,12 +39,6 @@
     .btn:hover {
       background-color: #04a94b;
     }
-    .carousel img {
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-      margin-bottom: 10px;
-    }
     .logo {
       width: 80px;
       height: 80px;
@@ -57,23 +51,14 @@
 <body>
   <div class="container">
     <!-- LOGO -->
-    <img class="logo" src="https://via.placeholder.com/80" alt="Logo">
+    <img class="logo" src="https://raw.githubusercontent.com/yuanshaofan555/line-page/main/0cb12a5d41c9bc911245450aac091ef.jpg" alt="Logo">
+    
     <h1>please send order here</h1>
 
     <!-- LINE 好友按钮 -->
     <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">Add me on LINE</a>
     <!-- LINE 群组按钮 -->
     <a class="btn" href="https://line.me/ti/g/NHALzjBWAe" target="_blank">Join LINE Group</a>
-
-    <!-- 热销款轮播图 -->
-    <div class="carousel">
-      <img src="https://via.placeholder.com/350x200?text=Hot+Item+1" alt="Hot Item 1">
-      <img src="https://via.placeholder.com/350x200?text=Hot+Item+2" alt="Hot Item 2">
-      <img src="https://via.placeholder.com/350x200?text=Hot+Item+3" alt="Hot Item 3">
-    </div>
-
-    <!-- 发送订单按钮 -->
-    <a class="btn" href="https://line.me/ti/p/ePv7l3ilZA" target="_blank">?? Send Order</a>
   </div>
 </body>
 </html>
